New changes incorporated according to the findings of code review
New changes incorporated according to the findings of code review